# Wisdoverse-Cell

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  SUPPORT.md  conftest.py  docker-compose.override.cn.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-heavy.txt  requirements-lock.txt  requirements.txt
.acceptance/: config.yaml  runner.py
.acceptance/checks/: llm_client.py  self_grading.py  spec_drift.py
.acceptance/templates/: new-agent-checklist.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-images.yml
agents/: CLAUDE.md  README.md  __init__.py  _alias.py
agents/analysis_agent/: Dockerfile  __init__.py  requirements.txt
agents/channel_gateway/: __init__.py
agents/chat_agent/: Dockerfile  __init__.py
agents/coordinator/: __init__.py
agents/dev_agent/: Dockerfile  __init__.py  requirements.txt
agents/evolution_agent/: README.md  __init__.py
agents/orchestration/: __init__.py
agents/pjm_agent/: Dockerfile  __init__.py  requirements.txt
agents/qa_agent/: Dockerfile  README.md  __init__.py  requirements.txt
agents/requirement_manager/: Dockerfile  __init__.py  requirements-vector.txt  requirements.txt
agents/sync_agent/: Dockerfile  __init__.py  requirements.txt
docker/: Dockerfile.agents  Dockerfile.ai-core  Dockerfile.test  agents-entrypoint.sh  cell-supervisor.py  docker-compose.test.yml
docker/compose/: docker-compose.app.yml  docker-compose.base.yml  docker-compose.go-gateway-legacy-prod.yml  docker-compose.go-gateway-legacy.yml  docker-compose.loadtest.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.rust-gateway-prod-shadow.yml  docker-compose.rust-gateway-prod.yml  docker-compose.rust-gateway-shadow.yml  docker-compose.rust-gateway.yml
docker/init-scripts/: 01-init.sql  02-agent-users.sh  02-agent-users.sql  03-init-replication.sh
docker/loki/: loki-config.yml
docker/nats/: nats-server.conf
docker/pgbouncer/: pgbouncer.ini  userlist.txt
docker/postgres/: init-replication.sh  primary.conf  replica.conf
docker/prometheus/: alertmanager.yml  prometheus.yml
docker/promtail/: promtail-config.yml
docker/redis/: redis.conf  sentinel.conf
docker/requirements/: agent-base.txt
docker/tempo/: tempo-config.yml
docker/traefik/: traefik-prod.yml  traefik.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  INDEX.md  README.md
docs/adr/: 0001-redis-streams-eventbus.md  0002-per-agent-db-isolation.md  0003-tiered-llm-model-strategy.md  0004-inter-agent-http-communication.md  0005-channel-gateway-hexagonal-unification.md  0007-rust-python-backend-migration.md
docs/architecture/: api-guidelines.md  architecture-principles.md  architecture-review-checklist.md  backend-architecture-analysis.md  backend-evolution-plan.md  backend-target-architecture.md  data-ownership.md  event-guidelines.md  identity-boundary.md  migration-plan.md  module-boundaries.md  observability-guidelines.md  per-runtime-migrations.md  release-checklist.md  rollback-checklist.md  service-boundaries.md  testing-strategy.md
docs/examples/: cn-build-mirrors.env.example
docs/guides/: agent-development.md  api-reference.md  backend-boundaries.md  event-catalog.md  incident-response.md  operations.md
docs/overview/: architecture.md  glossary.md  onboarding.md  product-model.md  project-layout.md
docs/specs/: 2026-03-20-requirement-manager-create-agent-app-design.md  2026-03-20-vector-store-plugin-design.md  acceptance-framework.md  feishu-integration-prd.md  qa-agent.md  requirement-manager-agent-prd.md  requirement-manager-verification.md  wisdoverse-cell-prd.md
docs/tasks/: 2026-04-30-codebase-issue-tasks.md  2026-05-01-spec-goal-implementation-plan.md
docs/workflows/: agent-development.json
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: agents.spec.ts  approvals.spec.ts  home-runtime-status.spec.ts  home.spec.ts  live-cell-home.spec.ts  live-stack.spec.ts  requirements.spec.ts
frontend/scripts/: check-fsd-boundaries.mjs
frontend/src/: instrumentation.ts  proxy.ts
gateway/: Dockerfile  Makefile  go.mod  go.sum
gateway/config/: config.example.yaml
infra/: docker-compose.yml
migrations/: env.py
migrations/versions/: 20260501_control_plane_ledger.py  20260502_reqmgr_tables.py  20260503_agentrole_events.py  20260504_pjm_decomp_statuses.py  20260504_qa_run_idempotency.py  20260504_runtime_tables.py  20260505_agent_prompt_configs.py  20260506_identity_users_table.py  20260507_requirement_event_outbox.py  20260508_pjm_event_outbox.py  20260509_qa_event_outbox.py  20260510_sync_event_outbox.py  20260511_user_interaction_event_outbox.py  (+5 more)
rust/: Cargo.toml
rust/gateway/: Cargo.toml  Dockerfile  build.rs
rust/gateway/src/: bitable_forward.rs  config.rs  feishu.rs  feishu_forward.rs  feishu_outbound.rs  lib.rs  main.rs  matcher.rs  pjm_forward.rs  rate_limit.rs  requirement_client.rs  routes.rs  state.rs  wecom.rs  wecom_outbound.rs
scripts/: batch_task_check.py  create-agent-workflow.sh  create_chat_message_indexes.sql  generate_openapi_snapshots.py  lint_deprecated_imports.py  lock-deps.sh  migrate_chroma_to_milvus.py  migrate_sqlite_to_postgres.py  migration_metrics.sh  migration_round_trip.sh  resolve-go-version.sh  rust_gateway_prod_gate.py  rust_gateway_prod_shadow_preflight.py  rust_gateway_shadow_check.py  rust_python_migration_audit.py  setup.sh  split_deploy_smoke.sh  test-env.sh
services/: README.md  __init__.py
shared/: __init__.py  config.py
skills/: __init__.py  batch_operations.py  confirm_requirement.py  export.py  help.py  list_requirements.py  reject_requirement.py  stats.py
(+1861 files in other folders)
