[project]
name = "wisdoverse_cell"
version = "1.0.0"
description = "AI Native OS - Wisdoverse Cell"
license = { text = "LicenseRef-Wisdoverse-Cell-BSL-1.1" }
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.5.3",
]

[tool.pytest.ini_options]
testpaths = ["agents", "shared", "tests", "skills"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    "frontend/node_modules",
    "frontend/.next",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "public: stable tests that must pass in the public GitHub CI gate without external infrastructure",
    "unit: tests that should run without external infrastructure",
    "integration: tests that may require PostgreSQL, Redis, NATS, Milvus, service processes, or API-compatible mocks",
    "e2e: End-to-end tests requiring full infrastructure",
    "e2e_full: Full E2E tests with real LLM",
    "requires_infra: tests that require local or CI-provisioned infrastructure",
    "resilience: Infrastructure failure scenario tests",
    "concurrency: Concurrent operation tests",
    "benchmark: Performance benchmark tests",
    "timeout(seconds): per-test timeout override for slow smoke or E2E checks",
    "slow: Slow running tests (>10s)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["E402"]
"**/test_*.py" = ["E402"]
"**/conftest.py" = ["E402"]
"**/*_pb2.py" = ["E712", "F821", "E501"]  # protobuf auto-generated

# Static type checking — Stage 5 item 3 per
# docs/architecture/migration-plan.md. Scope is intentionally narrow:
# one well-typed module at a time. Expanding the check is a separate
# follow-up PR that demonstrates the module passes locally before the
# CI gate sees it.
[tool.mypy]
python_version = "3.12"
files = [
    # Pure ports + value-object helpers (shared/core)
    "shared/core/__init__.py",
    "shared/core/channels/__init__.py",
    "shared/core/channels/base.py",
    "shared/core/channels/registry.py",
    "shared/core/channels/types.py",
    "shared/core/event_publisher.py",
    "shared/core/identity_ports.py",
    "shared/core/ids.py",
    "shared/core/integration_ports.py",
    "shared/core/messaging/__init__.py",
    "shared/core/messaging/models.py",
    "shared/core/messaging/platform_adapter.py",
    "shared/core/request_result.py",
    # Per-runtime domain layers — lifecycle FSMs, aggregates, and
    # verdict value objects. All pure Python with no I/O.
    "agents/dev_agent/core/domain/__init__.py",
    "agents/dev_agent/core/domain/lifecycle/__init__.py",
    "agents/dev_agent/core/domain/lifecycle/task_lifecycle.py",
    "agents/dev_agent/core/domain/task.py",
    "agents/pjm_agent/core/domain/__init__.py",
    "agents/pjm_agent/core/domain/decomposition.py",
    "agents/pjm_agent/core/domain/lifecycle/__init__.py",
    "agents/pjm_agent/core/domain/lifecycle/decomposition_lifecycle.py",
    "agents/qa_agent/core/domain/__init__.py",
    "agents/qa_agent/core/domain/acceptance_verdict.py",
    "agents/qa_agent/core/domain/acceptance_verdicts.py",
    "agents/requirement_manager/core/domain/__init__.py",
    "agents/requirement_manager/core/domain/lifecycle/__init__.py",
    "agents/requirement_manager/core/domain/lifecycle/requirement_lifecycle.py",
    "agents/requirement_manager/core/domain/lifecycle/requirement_states.py",
    "agents/requirement_manager/core/domain/requirement.py",
    "shared/control_plane/domain/__init__.py",
    "shared/control_plane/domain/agent_run_lifecycle.py",
    "shared/control_plane/domain/lifecycle/__init__.py",
    "shared/control_plane/domain/lifecycle/agent_run_lifecycle.py",
]
# Pure ports / protocols / value-object helpers. No SQLAlchemy, no
# FastAPI, no async LiteLLM clients in scope yet. `follow_imports =
# silent` prevents cascading errors from transitive untyped modules.
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true
